# dpeva

./: .coverage  .gitignore  AGENTS.md  CITATION.cff  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  README.md  TEST_REPORT.md  UQ_Refactoring_Technical_Documentation.md  audit_gate.py  audit_params.py  audit_round3.py  audit_script.py  banner_output.txt  coverage-unit.json  fix_progress_report.md  parameter_audit.json  parameter_audit.md  parameter_health_report.md  pyproject.toml  pytest.ini  refactoring_plan.md  requirements.txt  setup.py  variable_review_report.md  verify_audit.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: doc-lint.yml  docs-check.yml  docs-deploy.yml  docs.yml  python-quality.yml
.trae/documents/: 2026-03-25-stage8-candidate-parity-native-generation-plan.md  2026-03-31-Parity-Plots-Readability-Enhancement-Plan.md  2026-04-02-仓库整改计划.md  2026-04-03-核心功能单元测试集中攻坚计划.md  2026-04-05-AGENTS进一步瘦身与Developer-Guide承接计划.md  2026-04-05-文档治理收口与AGENTS实施计划.md  2026-06-10-docs-reports-dedup-governance-plan.md  2026-06-10-dpeva-atst-integration-implementation-plan.md  DP-EVA Code Review & Refactoring Report.md  DP-EVA_Functional_Migration_Report.md  DP-EVA_Project_Developer_Guide.md  DP-EVA_Project_Structure_Overview.md  DPEVA 工作流重构方案.md  DPEVA-workflow.md  DPEVA_Refactoring_Status_and_Roadmap.md  DPEVA项目重构前后功能点比对文档.md  DPTestResults 类废弃与重构方案文档.md  Inference_Module_Implementation.md  Modulo_Hypothesis_Report.md  Review_CollectionWorkflow_LogFix.md  Support for Multiple Data Pools in DP-EVA.md  UQ_Post_View_Refactoring_Delivery.md  descriptor_consistency_verification_report.md  enhanced_parity_fine_tuning.md  fix_error_density_triangle_plan.md  hexbin_enhanced_parity_improvements.md  joint_direct_sampling_report.md  optimize_parity_plots_plan.md  parity_plots_investigation_report.md  pca_legend_optimization_plan.md  plan_20260204_074428.md  plan_20260206_072136.md  uq-post-view 重构完成.md  variable_review_report.md  扩展单元测试覆盖率计划.md  重构 ParallelTrainer 以支持 Slurm 与本地双模式调度.md
.trae/rules/: project_rules.md
docs/: Code_Review_Report_v2.7.1.md  README.md  SLURM_WORKFLOW_DESIGN.md  Support for Multiple Data Pools in DP-EVA.md  Variable_Review_Report.md  uq_params_improvement.md
docs/_templates/: adr.md  how-to.md  page.md  report.md  troubleshooting.md
docs/api/: VALIDATION_RULES.md
docs/architecture/: README.md  design-report.md  visualization_decoupling_plan.md
docs/archive/: 2026-02-01-Variable_Review_Report.md  Code_Review_Report_v2.7.1.md  DP-EVA-0.4.7-Fix-Plan.md  README.md  Variable_Review_Report.md
docs/design/: Analysis_Collect_Refactoring_Review.md  README.md  (+3 more)
example/: dpdesc_direct.ipynb  dpdesc_rnd.ipynb  dpdesc_rnd_atom.ipynb
examples/: README.md  reproduce_fp_workflow.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
practices/: sai-1344-abacus.md
ref/: inp_helper.py  run_iterative_selection.py
sai-scripts/: gpu_dpatest-trn.sbatch  gpu_dpatest-val-npy.sbatch
scripts/: audit.py  build_model_comparison_report.py  check_docs.py  check_docs_freshness.py  collection_plot_regression.py  doc_check.py  fp11_1344_backend_report.py  fp11_1344_finalize_after_execute.sh  fp11_1344_make_config.py  fp11_1344_recover_after_false_finish.py  fp11_1344_recover_wrapper.sh  fp11_submission_helpers.py  gate.sh  release_helper.py  repair_labeling_stats.py  update_version.py  verify_docs.sh
src/: rnd_example.ipynb
tests/: README.md  conftest.py  gen_test_data.py  test_birch_clustering.py
tools/: audit.py  compare_npy_mixed_structures.py  converged_data_view.py  count_deepmd_system_frames.py  deepmd_verify_common.py  dpdata_addtrain.py  release_helper.py  verify_desc_consistency.py  verify_structure_descriptor_mapping.py
utils/: direct-rnd_iter-select.py  dpdata_update.py  rnd_iterative_select.py  run_collect_workflow.py
v0.6.3/: .buildinfo  genindex.html  py-modindex.html  search.html
v0.6.5/: genindex.html  py-modindex.html  search.html
v0.7.0/: py-modindex.html  search.html
v0.7.2/: index.html  searchindex.js
v0.8.0/: genindex.html  index.html  search.html  searchindex.js
v0.8.1/: index.html  py-modindex.html  search.html
(+1081 files in other folders)
