[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpeva"
dynamic = ["version"]
description = "Deep Potential EVolution Accelerator (DP-EVA)"
readme = "README.md"
authors = [
    { name = "James Misaka", email = "ff6757442@gmail.com" }
]
license = { file = "LICENCE" }
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Environment :: Console",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "dpdata",
    "matplotlib",
    "seaborn",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/QuantumMisaka/dpeva"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dpeva.__version__"}